# hermes-claude-auth

./: .gitignore  LICENSE  README.md  __init__.py  _betas.py  _model_config.py  _patches.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: smoke_test.py  structural_test.py
